--- a/index.html
+++ b/index.html
@@ -5,33 +5,52 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  
-    <title>ISFOR | Islamic Forum</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>    <link href="css/header.css" rel="stylesheet">
+
+    <title>ISFOR   |   Islamic Forum</title>
+
     <!--NAVBAR-->
+
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Islamic Forum</a>
+        <a href="index.html" class="navbar-brand js-scroll-trigger" ></a>
 
-    <h1>Assalamualaikum Ya Akhi Ya Ukhti</h1>
-    <div>
-      <ul class="navbar-nav text-uppercase ml-auto">
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#home">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#news">News</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#about">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#team">Team</a>
-        </li>
-      </ul>
+    <!--menu-->
+        <nav class="navbar navbar-default">
+          <div class="container-fluid">
+            <div class="navbar-header">
+              <a class="navbar-brand" href="index.html">Islamic Forum</a>
+            </div>
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#">News</a></li>
+              <li><a href="#">Team</a></li>
+              <li><a href="#">About</a></li>
+            </ul>
+          </div>
+        </nav>
+
+    <!--HEADER-->
+
+    <div class="jumbotron text-center">
+      <div id="bgrnd">
+      <h1>Assalamualaikum Ya Akhi Ya Ukhti</h1>
+      <h4>Selamat Datang di Islamic Forum </h4>
+      <br></<br>
+
+    <!--kolom search-->
+      <form>
+          <input class="search" type="text" placeholder="Cari Pertanyaan" required>
+          <input class="button" type="button" value="Cari">
+      </form>
     </div>
 
     </head>
-  <body>
+    <body>
 
   </body>
 </html>
