--- a/index.html
+++ b/index.html
@@ -14,43 +14,58 @@
     <title>ISFOR   |   Islamic Forum</title>
 
     <!--NAVBAR-->
-
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
         <a href="index.html" class="navbar-brand js-scroll-trigger" ></a>
 
-    <!--menu-->
+    <!--MENU-->
         <nav class="navbar navbar-default">
           <div class="container-fluid">
             <div class="navbar-header">
               <a class="navbar-brand" href="index.html">Islamic Forum</a>
             </div>
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#">News</a></li>
-              <li><a href="#">Team</a></li>
-              <li><a href="#">About</a></li>
+              <li class="nav-item"><a class="navbar-brand js-scroll-trigger" href="#home">Home</a></li>
+              <li class="nav-item"><a class="navbar-brand js-scroll-trigger" href="#news">News</a></li>
+              <li class="nav-item"><a class="navbar-brand js-scroll-trigger" href="#team">Team</a></li>
+              <li class="nav-item"><a class="navbar-brand js-scroll-trigger" href="#about">About</a></li>
             </ul>
           </div>
         </nav>
 
-    <!--HEADER-->
-
     <div class="jumbotron text-center">
-      <div id="bgrnd">
-      <h1>Assalamualaikum Ya Akhi Ya Ukhti</h1>
-      <h4>Selamat Datang di Islamic Forum </h4>
+      <!--HEADER-->     <!--INI KHUSUS HEADER AJAH GENGS-->
+      <header class="masthead">
+        <div class="container">
+          <div class="intro-text">
+            <div id="bgrnd">
+          <h1>Assalamualaikum Ya Akhi Ya Ukhti</h1>
+          <h4>Selamat Datang di Islamic Forum </h4>
       <br></<br>
+      <!--SAMPAI SINI GENGS HEADERNYA-->
 
-    <!--kolom search-->
-      <form>
-          <input class="search" type="text" placeholder="Cari Pertanyaan" required>
-          <input class="button" type="button" value="Cari">
-      </form>
+    <!--KOLOM SEARCH-->
+        <form>
+            <input class="search" type="text" placeholder="Cari Pertanyaan" required>
+            <input class="button" type="button" value="Cari">
+          </form>
+        </div>
+      </div>
     </div>
+  </div>
+  </header>
 
     </head>
     <body>
+      <!--HOME/PERTANYAAN TERATAS-->
+      <section id="home">   <!--INI YANG NGARUH SAMA LINK SCROLL DARI JS GAISSS :)-->
+        <div class="jumbotron text-center">
+          <div class="row">
+            <h2 class="section-heading text-uppercase">Pertanyaan Teratas</h2>
 
-  </body>
+          </div>
+        </div>
+      </section>
+
+    </body>
 </html>
