--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@
           </div>
         </div>
       </section>
+      <!--HOME/NEWS-->
+      <section id="news">       <!--INI YANG NGARUH SAMA LINK SCROLL DARI JS GAISSS :)-->
+        <div class="jumbotron text-center">
+          <div class="row">
+            <h2 class="section-heading text-uppercase">News</h2>
+
+          </div>
+        </div>
+      </section>
 
     </body>
 </html>
