--- a/index.html
+++ b/index.html
@@ -75,6 +75,15 @@
           </div>
         </div>
       </section>
+        <!--HOME/TEAM-->
+      <section id="team">       <!--INI YANG NGARUH SAMA LINK SCROLL DARI JS GAISSS :)-->
+        <div class="jumbotron text-center">
+          <div class="row">
+            <h2 class="section-heading text-uppercase">Team</h2>
+
+          </div>
+        </div>
+      </section>
 
     </body>
 </html>
