--- a/index.html
+++ b/index.html
@@ -85,5 +85,16 @@
         </div>
       </section>
 
+      <!--HOME/ABOUT-->
+    </section>
+    <section id="about">       <!--INI YANG NGARUH SAMA LINK SCROLL DARI JS GAISSS :)-->
+      <div class="jumbotron text-center">
+        <div class="row">
+          <h2 class="section-heading text-uppercase">About</h2>
+
+        </div>
+      </div>
+    </section>
+
     </body>
 </html>
