--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
         <div class="jumbotron text-center">
           <div class="row">
             <h2 class="section-heading text-uppercase">Pertanyaan Teratas</h2>
-
+                <h4>1. Kenapa Bumi itu bulat?</h4>
+                <h4>2. Kenapa Bulat itu bumi?</h4>
+                <h4>3. Bumi kenapa itu bulat?</h4>
+                <h4>4. bulat kenapa itu bumi?</h4>
+                <h4>5. itu Bumi kenapa bulat?</h4>
           </div>
         </div>
       </section>
