--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
               <li class="nav-item"><a class="navbar-brand js-scroll-trigger" href="#news">News</a></li>
               <li class="nav-item"><a class="navbar-brand js-scroll-trigger" href="#team">Team</a></li>
               <li class="nav-item"><a class="navbar-brand js-scroll-trigger" href="#about">About</a></li>
+              <li>
+                <a href="#">Login</a>
+              </li>
+              <li>
+                <a href="#">Sign Up</a>
+              </li>
             </ul>
           </div>
         </nav>
