--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                   
                     <div class = "media">
                        <a class = "pull-left" href = "#">
-                          <img class = "media-object " src = "artikel-1.jpg" width="300%" height="200px" >
+                          <img class = "media-object " src = "artikel-1.jpg" width="400px" height="300px" >
                        </a>
                        <div class = "media-body">
                           <p>Allah berfirman tentang status Nabi shallallahu ‘alaihi wa sallam sebagai rahmatan lil alamiin,<br>
@@ -112,7 +112,7 @@
                             “Wahai sekalian manusia, saya adalah rahmat yang dihadiahkan.” (HR. Hakim dalam al-Mustadrak 100, dan disahihkan serta disepakati ad-Dzahabi).</p>
                        </div>
                         <p style="text-align:right;">
-                            <a href="artikel_edukasi.html">
+                            <a href="artikel_aqidah.html">
                                 <button class="btn btn-primary">Read More</button>
                             </a>
                         </p>
@@ -141,6 +141,7 @@
                             ‘Ya Allah, berikanlah shalawat dan salam kepada Nabi kita Muhammad.’ Dalam kalimat ini terdapat kandungan makna,</p>  
                        </div>
                         <p style="text-align:right;">
+                           <a href="artikel_fiqih.html">
                             <button class="btn btn-primary">Read More</button>
                         </p>
                     </div>
@@ -152,7 +153,7 @@
                <div class="panel-heading"><h4 class="text-center">Latest News</h4></div>
                <div class="panel-body">
                     <div class="recent">
-                        <a href="#"><img class="img-responsive" src="img/artikel-3.jpg" alt="" /></a>                
+                        <a href="#"><img class="img-responsive" src="artikel-3.jpg" alt="" /></a>                
                         <div class="info-meta">
                             <ul class="list-inline">
                                 <li><i class="fa fa-clock-o"></i> Jan 5, 2016 </a></li>
@@ -166,7 +167,7 @@
                     </div>
                     
                     <div class="recent">
-                        <a href="#"><img class="img-responsive" src="img/artikel-4.jpg" alt="" /></a>                           
+                        <a href="#"><img class="img-responsive" src="artikel-4.jpg" alt="" /></a>                           
                         <div class="info-meta">
                             <ul class="list-inline">
                                 <li><i class="fa fa-clock-o"></i> Jan 5, 2016</li>
