--- a/index.html
+++ b/index.html
@@ -212,6 +212,28 @@
         <div class="jumbotron text-center">
           <div class="row">
             <h2 class="section-heading text-uppercase">Team</h2>
+            div class="row">
+          <div class="col-sm-4">
+            <div class="team-member">
+               
+              <h4>Alvienas Yandika</h4> <br>
+              <p class="text-muted">12 Desember 1998<br>
+             Mahasiswa Teknik Informatika </p><br> 
+             <ul class="list-inline social-buttons">
+                <li class="list-inline-item">
+                  <a href="#">
+                    <i class="fab fa-google"></i>
+                  </a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="#">
+                    <i class="fab fa-instagram"></i>
+                  </a>
+                </li>
+              </ul>
+              
+            </div>
+          </div>
 
           </div>
         </div>
