--- a/index.html
+++ b/index.html
@@ -293,12 +293,11 @@
 
       <!--HOME/ABOUT-->
     </section>
-     <section id="team">       <!--INI YANG NGARUH SAMA LINK SCROLL DARI JS GAISSS :)-->
+     <section id="about>       <!--INI YANG NGARUH SAMA LINK SCROLL DARI JS GAISSS :)-->
         <div class="jumbotron text-center">
           <div class="row">
             <h2 class="section-heading text-uppercase">About</h2>
-
-
+                                                      
             <div class="row">
               <div id="headerabout">
           <div class="col-sm-4">
