--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
               <li class="nav-item"><a class="navbar-brand js-scroll-trigger" href="#team">Team</a></li>
               <li class="nav-item"><a class="navbar-brand js-scroll-trigger" href="#about">About</a></li>
               <li>
-                <a href="#">Login</a>
+                <a href="index1.html">LOGIN</a>
               </li>
               <li>
-                <a href="#">Sign Up</a>
+                <a href="signUp.html">SIGN UP</a>
               </li>
             </ul>
           </div>
