--- a/index.html
+++ b/index.html
@@ -104,12 +104,14 @@
                           <img class = "media-object " src = "img/artikel-1.jpg" width="400px" height="300px" >
                        </a>
                        <div class = "media-body">
-                          <p>Allah berfirman tentang status Nabi shallallahu ‘alaihi wa sallam sebagai rahmatan lil alamiin,<br>
+                          <p><div style="text-align: justify;">
+<span style="color: black; font-family: Verdana,Arial,Helvetica,Georgia; font-size: 14px;">Allah berfirman tentang status Nabi shallallahu ‘alaihi wa sallam sebagai rahmatan lil alamiin,<br>
                             وَمَا أَرْسَلْنَاكَ إِلا رَحْمَةً لِلْعَالَمِينَ<br>
                             “Tidaklah Aku mengutusmu – wahai Muhammad – kecuali sebagai rahmat bagi seluruh alam.” (QS. al-Anbiya: 107)<br><br>
                             Dalam hadis yang shahih, Nabi shallallahu ‘alaihi wa sallam bersabda,<br>
                             أيهَا النَّاسُ إنَّمَا أَنَا رَحْمَةٌ مُهْدَاةٌ<br>
-                            “Wahai sekalian manusia, saya adalah rahmat yang dihadiahkan.” (HR. Hakim dalam al-Mustadrak 100, dan disahihkan serta disepakati ad-Dzahabi).</p>
+                            “Wahai sekalian manusia, saya adalah rahmat yang dihadiahkan.” (HR. Hakim dalam al-Mustadrak 100, dan disahihkan serta disepakati ad-Dzahabi).</p></span>
+</div>
                        </div>
                         <p style="text-align:right;">
                             <a href="artikel_aqidah.html">
