--- a/index.html
+++ b/index.html
@@ -138,9 +138,11 @@
                        </a>
                        
                        <div class = "media-body">
-                          <p>Shalawat termasuk bagian dari dzikir. Karena dalam lafadz shalawat, kita berdoa kepada Allah, <br>
+                          <div style="text-align: justify;">
+<span style="color: black; font-family: Verdana,Arial,Helvetica,Georgia; font-size: 14px;">Shalawat termasuk bagian dari dzikir. Karena dalam lafadz shalawat, kita berdoa kepada Allah, <br>
                             “Allahumma shalli wa sallim ‘ala Nabiyyinaa Muhammad”, yang artinya, <br>
-                            ‘Ya Allah, berikanlah shalawat dan salam kepada Nabi kita Muhammad.’ Dalam kalimat ini terdapat kandungan makna,</p>  
+                            ‘Ya Allah, berikanlah shalawat dan salam kepada Nabi kita Muhammad.’ Dalam kalimat ini terdapat kandungan makna,</span>
+</div>  
                        </div>
                         <p style="text-align:right;">
                            <a href="artikel_fiqih.html">
